--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
 <body>
     <header class="marging-padding">
         <nav class="open-sans-port">
-            <div>
-                <h2>Mary</h2>
+            <div class="Blog">
+                <h2>Ma<span class="orange">r</span>y</h2>
             </div>
             <ul>
-                <li>portfolio</li>
+                <li>Portfolio</li>
                 <li>Blog</li>
-                <li><button>
+                <li><button class="bts">
                     Hire Me
                 </button></li>
             </ul>
