--- a/index.html
+++ b/index.html
@@ -50,36 +50,22 @@
 
             </div>
             <div class="about-info">
-                <div>
-                    <p>Name</p>
-                    <h4>
-                        Hardy
-                    </h4>
-                </div>
-            </div>
-            <div class="about-info">
-                <div>
-                    <p>Email:</p>
-                    <h4>
-                        info@gmail.com
-                    </h4>
-                </div>
-            </div>
-            <div class="about-info">
-                <div>
-                    <p>Date of Birth</p>
-                    <h4>
-                        11 November 1987
-                    </h4>
-                </div>
-            </div>
-            <div class="about-info">
-                <div>
-                    <p>From</p>
-                    <h4>
-                        Los Angeles, Usa 
-                    </h4>
-                </div>
+               <div class="info">
+                <p>Name</p>
+                <h4>Hardy</h4>
+               </div>
+               <div class="info">
+                <p>Email</p>
+                <h4>info@gmail.com</h4>
+               </div>
+               <div class="info">
+                <p>Date of Birth</p>
+                <h4>11 November 1987</h4>
+               </div>
+               <div class="info">
+                <p>From</p> 
+                <h4>Los Abgeles, USA</h4>
+               </div>
 
             </div>
             </div>
