--- a/index.html
+++ b/index.html
@@ -71,5 +71,45 @@
             </div>
             
         </section>
+        <section id="Skills">
+            <div class="skills-container">
+                <div class="descriptions">
+                    <h1>What I do</h1>
+                    <p>
+                        I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+                    </p>
+                </div>
+                <div class="about-skills">
+                    <div class="skills-logo">
+                        <img src="images/icons/js.png" alt="">
+                        <h4>Vanilla JavaScript</h4>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skills-logo">
+                        <img src="images/icons/react.png" alt="">
+                        <h4>React</h4>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skills-logo">
+                        <img src="images/icons/nodejs.png" alt="">
+                        <h4>Node.js</h4>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                    <div class="skills-logo">
+                        <img src="images/icons/mongo.png" alt="">
+                        <h4>MongoDB</h4>
+                        <p>
+                            List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
 </body>
 </html>
